--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,18 @@ body.dark-theme .home {
 body.dark-theme .work {
   background-color: #30475E;
 }
+body.dark-theme .contact__description {
+  color: #999;
+}
+body.dark-theme .button {
+  opacity: 0.7;
+}
+body.dark-theme .header, body.dark-theme .nav__menu {
+  background-color: #262c29;
+}
+body.dark-theme .nav__link, body.dark-theme .nav__logo, body.dark-theme .nav__toggle, body.dark-theme .nav__close, body.dark-theme .change-theme {
+  color: #fff;
+}
 
 * {
   box-sizing: border-box;
@@ -462,6 +474,135 @@ img {
 ::-webkit-scrollbar-thumb {
   background: #474d4a;
   border-radius: 0.5rem;
+}
+
+.nav__toggle, .nav__close {
+  display: none;
+}
+
+@media only screen and (max-width: 968px) {
+  .container {
+    margin: 0 2rem;
+  }
+
+  .home {
+    justify-content: center;
+  }
+
+  .about__container {
+    column-gap: 0;
+  }
+
+  .about__img {
+    width: 200px;
+  }
+
+  .about__img, .about__data {
+    flex: 1 1 0;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .nav__logo {
+    display: inline-block;
+  }
+
+  .nav__toggle, .nav__close {
+    display: inline-flex;
+    color: #191919;
+    font-size: 1.5rem;
+  }
+
+  .nav__menu {
+    display: flex;
+    justify-content: center;
+    padding-top: 6rem;
+    position: fixed;
+    background-color: #fff;
+    width: 60%;
+    height: 100vh;
+    top: 0;
+    right: -100%;
+    z-index: 100;
+    box-shadow: -5px 0 10px #2528261a;
+    border-radius: 1rem 0 0 1rem;
+    transition: 0.3s;
+  }
+
+  .nav__list {
+    display: inline-flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+  }
+
+  .nav__close {
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1.25rem;
+    right: 2rem;
+  }
+
+  .menu-show {
+    right: 0;
+  }
+
+  .about, .work, .contact {
+    height: auto;
+  }
+
+  .home__title {
+    font-size: 5rem;
+  }
+
+  .section__title {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .about__container {
+    flex-wrap: wrap;
+  }
+
+  .about__data {
+    margin-top: -2.5rem;
+  }
+
+  .about__description {
+    margin-bottom: 1rem;
+  }
+
+  .about__details {
+    margin-bottom: 1rem;
+  }
+
+  .about__button {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .work {
+    margin: 4rem 0;
+  }
+
+  .work__container {
+    padding: 4rem 0;
+  }
+
+  .contact {
+    margin-bottom: 4rem;
+  }
+
+  .contact__container {
+    flex-wrap: wrap;
+  }
+
+  .contact__form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact__button {
+    align-self: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
